re/mutate-toml/src/snapshots/mutate_toml__tests__insert_new_key.snap
---
source: src/lib.rs
expression: editor.finish().unwrap()
---
[package]
name = "test"
description = "a thing"
