re/mutate-toml/src/snapshots/mutate_toml__tests__insert_new_table.snap
---
source: src/lib.rs
expression: editor.finish().unwrap()
---
[package]
name = "test"

[dependencies]
serde = "1.0"
