re/mutate-toml/src/snapshots/mutate_toml__tests__remove_dotted_key.snap
---
source: src/lib.rs
expression: editor.finish().unwrap()
---
[vscode.settings]
"editor.formatOnSave" = true
